# blog_api

./: .env.example  .gitignore  README.md  pyproject.toml
blog/: models.py  serializers.py  tests.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_post_author.py
core/: settings.py  urls.py
